src/test/deca/context/valid/test3_minimal.deca
// Description:
//    Programme ayant un main vide
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2021

{
	println("Hello");
}